# Dairy

./: .gitignore  .gitmodules  LICENSE  LICENSE.dairy  README.md  build.common.gradle  build.dependencies.gradle  build.gradle  dairy.common.gradle.kts  gradle.properties  settings.gradle
Archaeological/: build.gradle.kts
Calcified/: build.gradle.kts
Calcified/src/test/kotlin/: ControllerMemSafety.kt
Core/: build.gradle.kts
Core/src/main/kotlin/collections/annotatedtargets/: AnnotatedDataField.kt  AnnotatedDataMethod.kt  AnnotatedField.kt  AnnotatedMethod.kt  Flatpackaged.kt  FlattenedDataMethod.kt  (+3 more)
Core/src/main/kotlin/datacarton/: DataCarton.kt  DataLine.kt
Core/src/test/kotlin/: DataCartonTest.kt
DataCarton/: build.gradle.kts
DataCarton/src/main/kotlin/: Log.kt
DataCarton/src/main/kotlin/collections/: DataLineArrayList.kt  LimitedQueue.kt
DataCarton/src/main/kotlin/datacarton/: CartonComponent.kt  CartonComponentRenderer.kt  DataBlock.kt  DataCarton.kt  DataLine.kt  MessageBoard.kt  Render.kt  RenderOrder.kt  TimedDataLine.kt
DataCarton/src/main/kotlin/log/: CSVLog.kt  Log.kt  MessageLog.kt
DataCarton/src/test/kotlin/: DataCartonTest.kt
FTCLink/: build.gradle.kts
Fossil/: build.gradle.kts
Fossil/src/samples/: fossil-rules.fossil
MilkMan/: build.gradle.kts
MilkMan/rust/: Cargo.toml
MilkMan/rust/assets/: twind.style.min.js  ws.htmx.min.js
MilkMan/rust/src/: core.rs  lib.rs  main.rs
MilkMan/rust/src/core/: robot_controller.rs
MilkMan/src/test/kotlin/: JNITest.kt  URITest.kt
TeamCode/: build.gradle
Util/: build.gradle.kts
(+271 files in other folders)
