[package]
name = "milkman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = { version = "0.25.0", features = ["axum"] }
axum = { version = "0.6.0", features = ["ws"] }
jni = "0.21.1"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
once_cell = "1.19.0"
tower-http = { version = "0.4.4", features = ["fs", "cors"] }
futures = "0.3.30"
tokio-tungstenite = "0.20"
serde_json = "1.0.110"

[lib]
crate_type = ["cdylib"]
